# fastmcp_rust

./: .gitignore  Cargo.toml  FEATURE_PARITY.md  PROPOSED_RUST_ARCHITECTURE.md  README.md
.beads/: .gitignore  beads.db  config.yaml  issues.jsonl  last-touched
crates/fastmcp/: Cargo.toml
crates/fastmcp-cli/: Cargo.toml
crates/fastmcp-cli/src/: main.rs
crates/fastmcp-client/: Cargo.toml
crates/fastmcp-client/src/: builder.rs  lib.rs  mcp_config.rs  session.rs
crates/fastmcp-console/examples/: agent_detection.rs  basic.rs  custom_theme.rs  tables.rs
crates/fastmcp-console/src/: console.rs  handlers.rs  status.rs  tables.rs  theme.rs
crates/fastmcp-console/src/logging/: formatter.rs
crates/fastmcp-console/src/stats/: mod.rs  renderer.rs
crates/fastmcp-console/tests/e2e/: agent_mode.rs  configuration.rs  helpers.rs  human_mode.rs  main.rs  server_lifecycle.rs
crates/fastmcp-core/src/: combinator.rs  context.rs  duration.rs  error.rs  lib.rs  state.rs
crates/fastmcp-macros/src/: lib.rs
crates/fastmcp-protocol/src/: jsonrpc.rs  messages.rs  schema.rs  types.rs
crates/fastmcp-server/: Cargo.toml
crates/fastmcp-server/src/: auth.rs  bidirectional.rs  builder.rs  caching.rs  handler.rs  lib.rs  middleware.rs  proxy.rs  rate_limiting.rs  router.rs  session.rs  tasks.rs  tests.rs  transform.rs
crates/fastmcp-server/src/providers/: filesystem.rs
crates/fastmcp-transport/src/: async_io.rs  codec.rs  event_store.rs  http.rs  lib.rs  memory.rs  sse.rs  websocket.rs
crates/fastmcp/examples/: bench.rs  notes_server.rs
crates/fastmcp/src/: lib.rs
crates/fastmcp/src/testing/: assertions.rs  client.rs  mod.rs  server.rs  timing.rs  trace.rs
crates/fastmcp/src/testing/fixtures/: auth.rs  messages.rs  mod.rs  prompts.rs  resources.rs  tools.rs
crates/fastmcp/tests/: e2e_protocol.rs  e2e_workflow.rs  macro_expansion.rs  trybuild_tests.rs
crates/fastmcp/tests/trybuild/: prompt_invalid_timeout.rs  prompt_invalid_timeout.stderr  prompt_unknown_attr.rs  prompt_unknown_attr.stderr  resource_invalid_timeout.rs  resource_invalid_timeout.stderr  resource_missing_uri.rs  resource_missing_uri.stderr  resource_param_not_in_template.rs  resource_param_not_in_template.stderr  resource_params_without_template.rs  resource_params_without_template.stderr  resource_unknown_attr.rs  resource_unknown_attr.stderr  tool_invalid_timeout.rs  tool_invalid_timeout.stderr  tool_unknown_attr.rs  tool_unknown_attr.stderr  tool_zero_timeout.rs  tool_zero_timeout.stderr
