[workspace]
resolver = "2"
members = [
    "crates/fastmcp",
    "crates/fastmcp-core",
    "crates/fastmcp-transport",
    "crates/fastmcp-protocol",
    "crates/fastmcp-server",
    "crates/fastmcp-client",
    "crates/fastmcp-macros",
    "crates/fastmcp-console",
    "crates/fastmcp-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Runtime (our own)
asupersync = { path = "../asupersync" }
rich_rust = { path = "../rich_rust" }

# Serialization (only these)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging (facade only, zero-cost when disabled)
log = "0.4"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Configuration file parsing
toml = "0.8"
dirs = "6"

# Cryptographic RNG (for WebSocket masking)
getrandom = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Internal crates
fastmcp = { path = "crates/fastmcp" }
fastmcp-core = { path = "crates/fastmcp-core" }
fastmcp-transport = { path = "crates/fastmcp-transport" }
fastmcp-protocol = { path = "crates/fastmcp-protocol" }
fastmcp-server = { path = "crates/fastmcp-server" }
fastmcp-client = { path = "crates/fastmcp-client" }
fastmcp-macros = { path = "crates/fastmcp-macros" }
fastmcp-console = { path = "crates/fastmcp-console" }
fastmcp-cli = { path = "crates/fastmcp-cli" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these during early development
doc_markdown = "allow"
missing_const_for_fn = "allow"
doc_link_with_quotes = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
uninlined_format_args = "allow"
unused_self = "allow"
cast_precision_loss = "allow"
format_push_string = "allow"
needless_continue = "allow"
map_unwrap_or = "allow"
cast_possible_truncation = "allow"
similar_names = "allow"
must_use_candidate = "allow"
cast_lossless = "allow"
return_self_not_must_use = "allow"
match_same_arms = "allow"
collapsible_if = "allow"
clone_on_copy = "allow"
match_wildcard_for_single_variants = "allow"
manual_assert = "allow"
if_not_else = "allow"
trivially_copy_pass_by_ref = "allow"
struct_excessive_bools = "allow"
should_implement_trait = "allow"
vec_init_then_push = "allow"
unreadable_literal = "allow"
ref_option = "allow"
manual_pattern_char_comparison = "allow"
implicit_clone = "allow"
decimal_bitwise_operands = "allow"
cast_sign_loss = "allow"
needless_pass_by_value = "allow"
field_reassign_with_default = "allow"
