[package]
name = "fastmcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server implementation for FastMCP"

[dependencies]
fastmcp-core.workspace = true
fastmcp-client.workspace = true
fastmcp-console.workspace = true
fastmcp-protocol.workspace = true
fastmcp-transport.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
chrono.workspace = true
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"], optional = true }

[lints]
workspace = true

[features]
jwt = ["dep:jsonwebtoken"]
